<resources>
    <string name="app_name">BddExample</string>
    <string name="action_settings">Settings</string>
</resources>
